# discord-bot

./: Cargo.toml
src/: main.rs
src/commands/: calc.rs  math.rs  mod.rs
src/commands/calc_types/: mnozina.rs  mod.rs  polynomial.rs
