[package]
name = "e06_sample_bot_structure"
version = "0.1.0"
authors = ["my name <my@email.address>"]
edition = "2018"

[dependencies]
dotenv = "0.15"
tracing = "0.1.23"
tracing-subscriber = "0.2"
tokio = {version = "1.6.0", features = ["macros", "signal", "rt-multi-thread"]}
serenity = {version = "0.10.7", features = ["cache", "framework", "standard_framework", "rustls_backend"]}